fix font loading layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Inter", sans-serif;
+  font-display: optional;
   background: #f3f3f3;
   scroll-behavior: smooth;
 }
